# Layer_CSD

./: .gitignore  CMakeLists.txt  Readme.md  array_functions.c  constants.c  constants.h  csd_main.c  functions.h  grid_update.c  initialize.c  ion_channel.c  linear_update.c  makefile  misc_print_plot.c  update_solution.c
